fix text-align collapsible burger menu

--- a/src/App.css
+++ b/src/App.css
@@ -4074,6 +4074,7 @@ textarea.form-control-lg {
   flex-basis: 100%;
   flex-grow: 1;
   align-items: center;
+  text-align: right;
 }
 
 .navbar-toggler {
